2010-06-18  Alexis Menard  <alexis.menard@nokia.com>

        Reviewed by Simon Hausmann.

        Fix documentation issue on the onAlert handler.
        Fix compilation issue with QT_NO_ACTION.

        * declarative/qdeclarativewebview.cpp:
        * declarative/qdeclarativewebview_p.h:

2010-06-18  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Antti Koivisto.

        REGRESSION(r60958) [Qt] qwebpage::inputMethods auto-test fails
        https://bugs.webkit.org/show_bug.cgi?id=40830

        When activating a regular input method field, always set or unset the ImhHiddenText
        input method hint.

        * WebCoreSupport/EditorClientQt.cpp:
        (WebCore::EditorClientQt::setInputMethodState):

2010-06-18  Alexis Menard  <alexis.menard@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Change the target path to QtWebKit.

        * declarative/declarative.pro:

2010-06-15  Dumitru Daniliuc  <dumi@chromium.org>

        Reviewed by Adam Barth.

        Move isAvailable()/setIsAvailable() from Database/DatabaseSync to AbstractDatabase.
        https://bugs.webkit.org/show_bug.cgi?id=39041

        * Api/qwebsettings.cpp:
        (QWebSettingsPrivate::apply):

2010-06-17  Robert Hogan  <robert@webkit.org>

        [Qt] Build fix

        Unreviewed.

        Remove includes in qdeclarativewebview*.* that rely on an installation
        of QtWebKit.

        * declarative/qdeclarativewebview.cpp:
        * declarative/qdeclarativewebview_p.h:

2010-06-17  Robert Hogan  <robert@webkit.org>

        Unreviewed, rolling out r61346.
        http://trac.webkit.org/changeset/61346
        https://bugs.webkit.org/show_bug.cgi?id=33333

        Broke inspector tests on Qt

        * Api/qwebpage.cpp:
        (QWebPage::javaScriptConsoleMessage):

2010-06-17  Robert Hogan  <robert@webkit.org>

        Reviewed by Simon Hausmann.

        [Qt] pass plugins/open-and-close-window-with-plugin.html on Qt
